testing-apps/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testing-apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: testing-apps
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: testing-apps
    spec:
      containers:
        - name: testing-apps
          image: ragilarfan/golangechov2:v1
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
