testing-apps/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testing-apps
spec:
  selector:
    app: testing-apps
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
